# CalxSecurecpp

./: CMakeLists.txt  CMakeUserPresets.json  README.md
CalxSecure/: AES256.cpp  AES256.h  AdminPage.cpp  AdminPage.h  AdminPage.ui  AppController.cpp  AppController.h  AuthManager.cpp  AuthManager.h  CMakeLists.txt  CalxSecure.cpp  CalxSecure.h  CalxSecure.ui  DBSchema.h  DashboardPage.cpp  DashboardPage.h  DashboardPage.ui  DatabaseManager.cpp  DatabaseManager.h  GlobalStyle.cpp  GlobalStyle.h  Home.cpp  Home.h  Home.ui  HomePage.cpp  HomePage.h  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  P2PPage.cpp  P2PPage.h  P2PPage.ui  RechargeManager.cpp  RechargeManager.h  RewardsManager.cpp  RewardsManager.h  VaultCrypto.cpp  VaultCrypto.h  main.cpp
CalxSecure/CalxSecureInstaller/: calxsecure.iss
CalxSecure/components/: AnimatedButton.cpp  AnimatedButton.h  Card.cpp  Card.h  DockWidget.cpp  DockWidget.h  GradientLabel.cpp  GradientLabel.h  LoadingOverlay.cpp  LoadingOverlay.h  NavBar.cpp  NavBar.h  PinDialog.cpp  PinDialog.h  PinDialog.ui  TransactionSuccessDialog.cpp  TransactionSuccessDialog.h
CalxSecure/core/: AppState.cpp  AppState.h
CalxSecure/db/: schema.sql
CalxSecure/services/: ApiClient.cpp  ApiClient.h  PaymentService.cpp  PaymentService.h
